force-app/main/default/objects/State_Detail__c/State_Detail__c.object-meta.xml
<CustomObject>
    <label>State Detail</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>