force-app/main/default/objects/State_Detail__c/fields/Approved_State__c.field-meta.xml
<CustomField>
    <fullName>Approved_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved State</label>
    <type>Checkbox</type>
</CustomField>