force-app/main/default/objects/State_Detail__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <label>Country Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>