force-app/main/default/objects/State_Detail__c/fields/eNett_Client_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>eNett_Client_Abbreviation__c</fullName>
    <label>eNett Client Abbreviation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>