force-app/main/default/objects/State_Detail__c/fields/State_ID__c.field-meta.xml
<CustomField>
    <fullName>State_ID__c</fullName>
    <label>State ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>