force-app/main/default/objects/State_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Name__c</columns>
    <columns>State_ID__c</columns>
    <columns>eNett_Client_Abbreviation__c</columns>
    <columns>Approved_State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>