force-app/main/default/objects/State_Detail__c/listViews/Non_Approved_Countries_States.listView-meta.xml
<ListView>
    <fullName>Non_Approved_Countries_States</fullName>
    <columns>NAME</columns>
    <columns>Country_Name__c</columns>
    <columns>State_ID__c</columns>
    <columns>eNett_Client_Abbreviation__c</columns>
    <columns>Approved_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved_State__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non Approved Countries &amp; States</label>
</ListView>